--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 							<div id="menu">
 								<ul>
 									<li><a href="index.html">Home</a></li>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="elements.html">Elements</a></li>
+									<li><a href="cv.html">CV</a></li>
+									<li><a href="projects.html">Projects</a></li>
 								</ul>
 							</div>
 						</li>
@@ -48,102 +48,21 @@
 				<section id="one" class="wrapper style1 special">
 					<div class="inner">
 						<header class="major">
-							<h2>Arcu aliquet vel lobortis ata nisl<br />
-							eget augue amet aliquet nisl cep donec</h2>
-							<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-							fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							<p>I am a Second-year BS-MS Physics Research Student at <a href="https://www.iiserpune.ac.in/">IISER Pune</a>.</p> <p>I'm interested in astrophysics; especially gravitational astrophysics. I enjoy studying morphology of galaxies, dynamics of galaxy clusters and evolution of celestial objects, particularly stars and nebulae.</p>
+							<p>Outside academia, I am an ardent hiker, cyclist, traveller, and reader. I think best when I'm by myself, preferably on top of a mountain, or inside a café!</p>
+							<p>I'm currently working on image processing of obervational data primarily using Python and related tools. Selected projects can be found through my <a href="https://github.com/johnerinjery/">GitHub</a>, and via the website menu.</p>
 						</header>
-						<ul class="icons major">
-							<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-							<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-							<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-						</ul>
 					</div>
 				</section>
-				<!-- Two -->
-				<section id="two" class="wrapper alt style2">
-					<section class="spotlight">
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-						<h2>Magna primis lobortis<br />
-						sed ullamcorper</h2>
-						<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-					</div>
-				</section>
-				<section class="spotlight">
-					<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-					<h2>Tortor dolore feugiat<br />
-					elementum magna</h2>
-					<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-				</div>
-			</section>
-			<section class="spotlight">
-				<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-				<h2>Augue eleifend aliquet<br />
-				sed condimentum</h2>
-				<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-			</div>
-		</section>
-	</section>
-	<!-- Three -->
-	<section id="three" class="wrapper style3 special">
-		<div class="inner">
-			<header class="major">
-				<h2>Accumsan mus tortor nunc aliquet</h2>
-				<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-				fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-			</header>
-			<ul class="features">
-				<li class="icon fa-paper-plane">
-					<h3>Arcu accumsan</h3>
-					<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-				</li>
-				<li class="icon solid fa-laptop">
-					<h3>Ac Augue Eget</h3>
-					<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-				</li>
-				<li class="icon solid fa-code">
-					<h3>Mus Scelerisque</h3>
-					<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-				</li>
-				<li class="icon solid fa-headphones-alt">
-					<h3>Mauris Imperdiet</h3>
-					<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-				</li>
-				<li class="icon fa-heart">
-					<h3>Aenean Primis</h3>
-					<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-				</li>
-				<li class="icon fa-flag">
-					<h3>Tortor Ut</h3>
-					<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-				</li>
-			</ul>
-		</div>
-	</section>
-	<!-- CTA -->
-	<section id="cta" class="wrapper style4">
-		<div class="inner">
-			<header>
-				<h2>Arcue ut vel commodo</h2>
-				<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-			</header>
-			<ul class="actions stacked">
-				<li><a href="#" class="button fit primary">Activate</a></li>
-				<li><a href="#" class="button fit">Learn More</a></li>
-			</ul>
-		</div>
-	</section>
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="icons">
-			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-			<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-			<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			<li><a href="https://www.instagram.com/johnerinjery" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+			<li><a href="https://github.com/johnerinjery" class="icon brands fa-github" target="_blank"><span class="label" >Github</span></a></li>
+			<li><a href="https://www.linkedin.com/in/john-erinjery-297178372" class="icon brands fa-linkedin"  target="_blank"><span class="label">Linkedin</span></a></li>
 		</ul>
 		<ul class="copyright">
-			<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			<li>&copy; John Erinjery</li>
 		</ul>
 	</footer>
 </div>
