Internal links, robots and sitmaps for SEO

--- a/cv.html
+++ b/cv.html
@@ -4,8 +4,8 @@
     <title>CV</title>
     <meta charset="utf-8" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
+    name="viewport"
+    content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link
@@ -13,106 +13,108 @@
       href="images/circle-galaxy.png"
       type="image/png"
       sizes="64x64"
-    />
-    <meta name="author" content="John Erinjery" />
-    <meta
+      />
+      <meta name="author" content="John Erinjery" />
+      <meta
       name="description"
       content="Hi, I am John Erinjery. This website contains relevant information about me, my education, my intrests, online presence and works."
-    />
-    <meta
+      />
+      <meta
       name="keywords"
       content="John Erinjery, Erinjery, Physics, IISER, IISER Pune, Astrophysics, Student, Research"
-    />
-    <noscript
+      />
+      <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
-  <body class="is-preload">
-    <!-- Page Wrapper -->
-    <div id="page-wrapper">
-      <!-- Header -->
-      <header id="header">
-        <h1><a href="index.html">CV</a></h1>
-        <nav id="nav">
-          <ul>
-            <li class="special">
-              <a href="#menu" class="menuToggle"><span>Menu</span></a>
-              <div id="menu">
-                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="cv.html">CV</a></li>
-                  <li><a href="projects.html">Projects</a></li>
-                </ul>
+        /></noscript>
+      </head>
+      <body class="is-preload">
+        <!-- Page Wrapper -->
+        <div id="page-wrapper">
+          <!-- Header -->
+          <header id="header">
+            <h1><a href="index.html">CV</a></h1>
+            <nav id="nav">
+              <ul>
+                <li class="special">
+                  <a href="#menu" class="menuToggle"><span>Menu</span></a>
+                  <div id="menu">
+                    <ul>
+                      <li><a href="/">Home</a></li>
+                      <li><a href="/cv.html">CV</a></li>
+                      <li><a href="/projects.html">Projects</a></li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </nav>
+          </header>
+          <!-- Main -->
+          <article id="main">
+            <header>
+              <h2><i>curriculum vitae</i></h2>
+            </header>
+            <section class="wrapper style5">
+              <div class="inner">
+                <h3>Research Intrests</h3>
+                <p>
+                  ...
+                </p>
+                <hr>
+                <h3>Education</h3>
+                <p>
+                  <ul>
+                    <li>Ongoing BS-MS in Physics from <a href="https://www.iiserpune.ac.in">IISER Pune</a>. Graduation in 2029.</li>
+                    <li>Schooling upto 12th grade from <a href="https://stpaulspublicschool.ac.in/">St. Paul's</a> Public School, Kuriachira.</li>
+                  </ul>
+                </p>
+                <hr />
+                <h3>Experience</h3>
+                <p>...</p>
+                <p>...</p>
+                <p>To be updated</p>
               </div>
-            </li>
-          </ul>
-        </nav>
-      </header>
-
-      <!-- Main -->
-      <article id="main">
-        <header>
-          <h2><i>curriculum vitae</i></h2>
-        </header>
-        <section class="wrapper style5">
-          <div class="inner">
-            <h3>Education</h3>
-            <p>...</p>
-
-            <p>...</p>
-
-            <hr />
-
-            <h4>Experience</h4>
-            <p>...</p>
-
-            <p>...</p>
-            <p>To be updated</p>
-          </div>
-        </section>
-      </article>
-
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a
-              href="https://www.instagram.com/johnerinjery"
-              class="icon brands fa-instagram"
-              target="_blank"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/johnerinjery"
-              class="icon brands fa-github"
-              target="_blank"
-              ><span class="label">Github</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/john-erinjery-297178372"
-              class="icon brands fa-linkedin"
-              target="_blank"
-              ><span class="label">Linkedin</span></a
-            >
-          </li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; John Erinjery</li>
-        </ul>
-      </footer>
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
-</html>
+            </section>
+          </article>
+          <!-- Footer -->
+          <footer id="footer">
+            <ul class="icons">
+              <li>
+                <a
+                  href="https://www.instagram.com/johnerinjery"
+                  class="icon brands fa-instagram"
+                  target="_blank"
+                  ><span class="label">Instagram</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://github.com/johnerinjery"
+                    class="icon brands fa-github"
+                    target="_blank"
+                    ><span class="label">Github</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/in/john-erinjery-297178372"
+                      class="icon brands fa-linkedin"
+                      target="_blank"
+                      ><span class="label">Linkedin</span></a
+                      >
+                    </li>
+                  </ul>
+                  <ul class="copyright">
+                    <li>&copy; John Erinjery</li>
+                  </ul>
+                </footer>
+              </div>
+              <!-- Scripts -->
+              <script src="assets/js/jquery.min.js"></script>
+              <script src="assets/js/jquery.scrollex.min.js"></script>
+              <script src="assets/js/jquery.scrolly.min.js"></script>
+              <script src="assets/js/browser.min.js"></script>
+              <script src="assets/js/breakpoints.min.js"></script>
+              <script src="assets/js/util.js"></script>
+              <script src="assets/js/main.js"></script>
+            </body>
+          </html>
