--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
               <a href="#menu" class="menuToggle"><span>Menu</span></a>
               <div id="menu">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="cv.html">CV</a></li>
-                  <li><a href="projects.html">Projects</a></li>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/cv.html">CV</a></li>
+                  <li><a href="/projects.html">Projects</a></li>
                 </ul>
               </div>
             </li>
