--- a/cv.html
+++ b/cv.html
@@ -1,115 +1,137 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CV</title>
-    <meta charset="utf-8" />
-    <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="icon" href="/images/galaxy.ico" type="image/ico" />
-      <meta name="author" content="John Erinjery" />
-      <meta
-      name="description"
-      content="Hi, I am John Erinjery. This website contains relevant information about me, my education, my intrests, online presence and works."
-      />
-      <meta
-      name="keywords"
-      content="John Erinjery, Erinjery, Physics, IISER, IISER Pune, Astrophysics, Student, Research"
-      />
-      <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-        /></noscript>
-      </head>
-      <body class="is-preload">
-        <!-- Page Wrapper -->
-        <div id="page-wrapper">
-          <!-- Header -->
-          <header id="header">
-            <h1><a href="index.html">CV</a></h1>
-            <nav id="nav">
+
+<head>
+  <title>CV</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <meta name="author" content="John Erinjery" />
+  <meta name="description"
+    content="Hi, I am John Erinjery. This website contains relevant information about me, my education, my intrests, online presence and works." />
+  <meta name="keywords"
+    content="John Erinjery, Erinjery, Physics, IISER, IISER Pune, Astrophysics, Student, Research" />
+  <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" />
+  </noscript>
+</head>
+
+<body class="is-preload">
+  <!-- Page Wrapper -->
+  <div id="page-wrapper">
+    <!-- Header -->
+    <header id="header">
+      <h1><a href="index.html">CV</a></h1>
+      <nav id="nav">
+        <ul>
+          <li class="special">
+            <a href="#menu" class="menuToggle"><span>Menu</span></a>
+            <div id="menu">
               <ul>
-                <li class="special">
-                  <a href="#menu" class="menuToggle"><span>Menu</span></a>
-                  <div id="menu">
-                    <ul>
-                      <li><a href="/">Home</a></li>
-                      <li><a href="/cv.html">CV</a></li>
-                      <li><a href="/projects.html">Projects</a></li>
-                    </ul>
-                  </div>
-                </li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/cv.html">CV</a></li>
+                <li><a href="/projects.html">Projects</a></li>
               </ul>
-            </nav>
-          </header>
-          <!-- Main -->
-          <article id="main">
-            <header>
-              <h2><i>curriculum vitae</i></h2>
-            </header>
-            <section class="wrapper style5">
-              <div class="inner">
-                <h3>Research Intrests</h3>
-                <p>
-                  ...
-                </p>
-                <hr>
-                <h3>Education</h3>
-                <p>
-                  <ul>
-                    <li>Ongoing BS-MS in Physics from <a href="https://www.iiserpune.ac.in">IISER Pune</a>. Graduation in 2029.</li>
-                    <li>Schooling upto 12th grade from <a href="https://stpaulspublicschool.ac.in/">St. Paul's</a> Public School, Kuriachira.</li>
-                  </ul>
-                </p>
-                <hr />
-                <h3>Experience</h3>
-                <p>...</p>
-                <p>...</p>
-                <p>To be updated</p>
-              </div>
-            </section>
-          </article>
-          <!-- Footer -->
-          <footer id="footer">
-            <ul class="icons">
-              <li>
-                <a
-                  href="https://www.instagram.com/johnerinjery"
-                  class="icon brands fa-instagram"
-                  target="_blank"
-                  ><span class="label">Instagram</span></a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://github.com/johnerinjery"
-                    class="icon brands fa-github"
-                    target="_blank"
-                    ><span class="label">Github</span></a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="https://www.linkedin.com/in/john-erinjery-297178372"
-                      class="icon brands fa-linkedin"
-                      target="_blank"
-                      ><span class="label">Linkedin</span></a
-                      >
-                    </li>
-                  </ul>
-                  <ul class="copyright">
-                    <li>&copy; John Erinjery</li>
-                  </ul>
-                </footer>
-              </div>
-              <!-- Scripts -->
-              <script src="assets/js/jquery.min.js"></script>
-              <script src="assets/js/jquery.scrollex.min.js"></script>
-              <script src="assets/js/jquery.scrolly.min.js"></script>
-              <script src="assets/js/browser.min.js"></script>
-              <script src="assets/js/breakpoints.min.js"></script>
-              <script src="assets/js/util.js"></script>
-              <script src="assets/js/main.js"></script>
-            </body>
-          </html>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Main -->
+    <article id="main">
+      <header>
+        <h2><i>curriculum vitae</i></h2>
+      </header>
+      <section class="wrapper style5">
+        <div class="inner">
+          <h3>Research Intrests</h3>
+          <p>
+            Astrophysics, Computational Physics, High-energy Stellar Systems, Gravitational Physics,
+            Analysis of Observational Survey Data.
+          </p>
+          <hr>
+          <h3>Education</h3>
+          <p>
+          <ul>
+            <li>BS-MS in Physics, <a href="https://www.iiserpune.ac.in">IISER Pune</a> - <em>Expected Graduation in
+                2029. </em>
+            </li>
+          </ul>
+          </p>
+          <hr />
+          <h3>Relevant Coursework</h3>
+          <p>Classical Mechanics, Electricity and Magnetism, Quantum Physics, Mathematical Methods for Physics, Thermal
+            & Statistical Physics (<i>in progress</i>), Calculus I-II, Linear Algebra, Probability, Introduction to
+            Computing, Data Analysis.</p>
+          <hr>
+          <h3>Projects</h3>
+          <p><strong>Replication of Eclipsing Binary Detection from ZTF Light Curves</strong><i> (Ongoing)</i>
+          <ul>
+            <li>Reproduced published methodology for identifying eclipsing binary systems using ZTF time-domain
+              photometric data.</li>
+            <li>Implemented light-curve preprocessing, period search (e.g., Lomb-Scargle), and phase folding in Python.
+            </li>
+            <li>Validated results by comparison with cataloged binaries and discussed limitations of the approach.</li>
+          </ul>
+          </p>
+          <hr>
+          <h3>Skills</h3>
+          <ul>
+            <li><strong>Programming:</strong> Python</li>
+            <li><strong>Scientific Libraries:</strong> NumPy, Matplotlib, Astropy (familiar), SciPy (basic)</li>
+            <li><strong>Tools:</strong> Git, LaTeX, SAOImage DS9, Jupyter Notebook</li>
+          </ul>
+          <hr>
+          <h3>Honors & Awards</h3>
+          <ul>
+            <li>Reliance Foundation Scholarship - Awarded for academic merit.</li>
+          </ul>
+          <hr>
+          <h3>Schools & Workshops</h3>
+          <ul>
+            <li>
+              Undergraduate Summer School on Nuclear Physics, IIT Roorkee, 2025 - <em>Participant; Presented a talk on
+                the
+                Yukawa potential.</em>
+            </li>
+            <li>
+              IISc Physics Winter School, 2025 - <em>Evaluated Participant (coursework and quizzes).</em>
+            </li>
+          </ul>
+          <hr>
+          <p><a href="/assets/pdf/cv.pdf">Download PDF</a></p>
+        </div>
+      </section>
+    </article>
+    <!-- Footer -->
+    <footer id="footer">
+      <ul class="icons">
+        <li>
+          <a href="https://www.instagram.com/johnerinjery" class="icon brands fa-instagram" target="_blank"><span
+              class="label">Instagram</span></a>
+        </li>
+        <li>
+          <a href="https://github.com/johnerinjery" class="icon brands fa-github" target="_blank"><span
+              class="label">Github</span></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/john-erinjery-297178372" class="icon brands fa-linkedin"
+            target="_blank"><span class="label">Linkedin</span></a>
+        </li>
+      </ul>
+      <ul class="copyright">
+        <li>&copy; John Erinjery</li>
+      </ul>
+    </footer>
+  </div>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.scrollex.min.js"></script>
+  <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
+
+</html>
