--- a/index.html
+++ b/index.html
@@ -1,141 +1,115 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>John Erinjery</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <meta
-      name="google-site-verification"
-      content="kBbEMH2WQYxLDNCP6ZVV7rGMoXGtF4co0i41yO5urB8"
-    />
-    <link rel="icon" href="/images/galaxy.ico" type="image/ico" />
-    <meta
-      name="description"
-      content="Second-year BS-MS Physics Research Student at IISER Pune, interested in astrophysics with a focus on gravitational astrophysics."
-    />
-    <meta name="author" content="John Erinjery" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="John Erinjery" />
-    <meta
-      property="og:description"
-      content="Second-year BS-MS Physics Research Student at IISER Pune, interested in astrophysics with a focus on gravitational astrophysics."
-    />
-    <meta property="og:title" content="John Erinjery" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
-  <body class="landing">
-    <!-- Page Wrapper -->
-    <div id="page-wrapper">
-      <!-- Header -->
-      <header id="header" class="alt">
-        <h1><a href="index.html">John Erinjery</a></h1>
-        <nav id="nav">
-          <ul>
-            <li class="special">
-              <a href="#menu" class="menuToggle"><span>Menu</span></a>
-              <div id="menu">
-                <ul>
-                  <li><a href="/">Home</a></li>
-                  <li><a href="/cv.html">CV</a></li>
-                  <li><a href="/projects.html">Projects</a></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <!-- Banner -->
-      <section id="banner">
-        <div class="inner">
-          <img
-            src="images/profile.jpg"
-            alt="portait of John Erinjery"
-            width="100"
-          />
-          <h2>John Erinjery</h2>
+
+<head>
+  <title>John Erinjery</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <meta name="google-site-verification" content="kBbEMH2WQYxLDNCP6ZVV7rGMoXGtF4co0i41yO5urB8" />
+  <meta name="description"
+    content="Second-year BS-MS Physics Research Student at IISER Pune, interested in astrophysics with a focus on gravitational astrophysics." />
+  <meta name="author" content="John Erinjery" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="John Erinjery" />
+  <meta property="og:description"
+    content="Second-year BS-MS Physics Research Student at IISER Pune, interested in astrophysics with a focus on gravitational astrophysics." />
+  <meta property="og:title" content="John Erinjery" />
+  <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" />
+  </noscript>
+</head>
+
+<body class="landing">
+  <!-- Page Wrapper -->
+  <div id="page-wrapper">
+    <!-- Header -->
+    <header id="header" class="alt">
+      <h1><a href="index.html">John Erinjery</a></h1>
+      <nav id="nav">
+        <ul>
+          <li class="special">
+            <a href="#menu" class="menuToggle"><span>Menu</span></a>
+            <div id="menu">
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/cv.html">CV</a></li>
+                <li><a href="/projects.html">Projects</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Banner -->
+    <section id="banner">
+      <div class="inner">
+        <img src="images/profile.jpg" alt="portait of John Erinjery" width="100" />
+        <h2>John Erinjery</h2>
+        <p>
+          BS-MS Physics Research Student at
+          <a href="https://www.iiserpune.ac.in/" target="_blank">IISER Pune</a>
+        </p>
+      </div>
+    </section>
+    <!-- One -->
+    <section id="one" class="wrapper style1 special">
+      <div class="inner">
+        <header class="major">
           <p>
-            BS-MS Physics Research Student at
-            <a href="https://www.iiserpune.ac.in/" target="_blank"
-              >IISER Pune</a
-            >
+            I am a Second-year BS-MS Physics Research Student at
+            <a href="https://www.iiserpune.ac.in/">IISER Pune</a>.
           </p>
-        </div>
-      </section>
-      <!-- One -->
-      <section id="one" class="wrapper style1 special">
-        <div class="inner">
-          <header class="major">
-            <p>
-              I am a Second-year BS-MS Physics Research Student at
-              <a href="https://www.iiserpune.ac.in/">IISER Pune</a>.
-            </p>
-            <p>
-              I'm interested in astrophysics; especially gravitational
-              astrophysics. I enjoy studying morphology of galaxies, dynamics of
-              galaxy clusters and evolution of celestial objects, particularly
-              stars and nebulae.
-            </p>
-            <p>
-              Outside academia, I am an ardent hiker, cyclist, traveller, and
-              reader. I think best when I'm by myself, preferably on top of a
-              mountain, or inside a café!
-            </p>
-            <p>
-              I'm currently working on image processing of obervational data
-              primarily using Python and related tools. Selected projects can be
-              found through my
-              <a href="https://github.com/johnerinjery/">GitHub</a>, and via the
-              website menu.
-            </p>
-          </header>
-        </div>
-      </section>
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a
-              href="https://www.instagram.com/johnerinjery"
-              class="icon brands fa-instagram"
-              target="_blank"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/johnerinjery"
-              class="icon brands fa-github"
-              target="_blank"
-              ><span class="label">Github</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/john-erinjery-297178372"
-              class="icon brands fa-linkedin"
-              target="_blank"
-              ><span class="label">Linkedin</span></a
-            >
-          </li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; John Erinjery</li>
-        </ul>
-      </footer>
-    </div>
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+          <p>
+            I'm interested in astrophysics; especially gravitational
+            astrophysics. I enjoy studying morphology of galaxies, dynamics of
+            galaxy clusters and evolution of celestial objects, particularly
+            stars and nebulae.
+          </p>
+          <p>
+            Outside academia, I am an ardent hiker, cyclist, traveller, and
+            reader. I think best when I'm by myself, preferably on top of a
+            mountain, or inside a café!
+          </p>
+          <p>
+            I'm currently working on image processing of obervational data
+            primarily using Python and related tools. Selected projects can be
+            found through my
+            <a href="https://github.com/johnerinjery/">GitHub</a>, and via the
+            website menu.
+          </p>
+        </header>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer id="footer">
+      <ul class="icons">
+        <li>
+          <a href="https://www.instagram.com/johnerinjery" class="icon brands fa-instagram" target="_blank"><span
+              class="label">Instagram</span></a>
+        </li>
+        <li>
+          <a href="https://github.com/johnerinjery" class="icon brands fa-github" target="_blank"><span
+              class="label">Github</span></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/john-erinjery-297178372" class="icon brands fa-linkedin"
+            target="_blank"><span class="label">Linkedin</span></a>
+        </li>
+      </ul>
+      <ul class="copyright">
+        <li>&copy; John Erinjery</li>
+      </ul>
+    </footer>
+  </div>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.scrollex.min.js"></script>
+  <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
+
 </html>
